--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,39 +1,33 @@
-{{ define "main"}}
-  <h1>{{ .Title }}</h1>
-  {{ partial "header.html" . }}
-  <!-- search box -->
-  <div id="searchBox">
-    <input type="text" id="searchBoxInput" placeholder="Search..." />
-    <img id="searchBoxIcon" src="{{ .Site.BaseURL }}/img/search.png" />
-  </div>
-  <!-- search results -->
-  <div id="searchResults"></div>
-  <!-- tags -->
-  <div id="tags">
-    <ul>
-      {{ range .Site.Taxonomies.tags.ByCount }}
-        <li><a href="{{ .Page.Permalink }}">{{ .Page.Title }} ({{ .Count }})</a></li>
-      {{ end }}
-    </ul>
-  </div>
-  <!-- contents -->
-  <div id="contentsList">
-    {{ $listPageDateFormat := .Site.Params.listPageDateFormat | default "January, 2006"}}
-    {{ range $index, $value := .Pages.GroupByDate $listPageDateFormat }}
-    {{ if (ne $index 0) }}
-    <hr class="separator">
-    {{ end }}
-    <p class="date">{{ .Key }}</p>
-    {{ range .Pages }}
-      <p><a href="{{ .Permalink }}">{{ .Title }}</a></p>
-    {{ end }}
-    {{ end }}
-  </div>
-  {{ partial "footer.html" . }}
-  {{ $jquery := resources.Get "js/jquery-3.3.1.min.js" }}
-  {{ $mark := resources.Get "js/jquery.mark.es6.min.js" }}
-  {{ $lunr := resources.Get "js/lunr.js" }}
-  {{ $search := resources.Get "js/search.js" }}
-  {{ $js := slice $jquery $mark $lunr $search | resources.Concat "bundle.js" | resources.Minify | resources.Fingerprint }}
-  <script src="{{ $js.Permalink }}"></script>
+{{ define "header" }}
+{{ partialCached "header.html" . }}
+{{ end }}
+
+{{ define "main" }}
+	<main class="site-main section-inner thin animated fadeIn faster">
+		<h1>{{ .Title }}</h1>
+		{{- if .Content }}
+		<div class="content">
+			{{ .Content }}
+		</div>
+		{{- end }}
+		{{- range .Data.Pages.GroupByDate "2006" }}
+		<div class="posts-group">
+			<div class="post-year" id="{{ .Key }}">{{ .Key }}</div>
+			<ul class="posts-list">
+				{{- range .Pages }}
+				<li class="post-item">
+					<a href="{{.Permalink}}">
+						<span class="post-title">{{.Title}}</span>
+						<span class="post-day">{{ .Date.Format .Site.Params.dateformShort }}</span>
+					</a>
+				</li>
+				{{- end }}
+			</ul>
+		</div>
+		{{- end }}
+	</main>
+{{ end }}
+
+{{ define "footer" }}
+{{ partialCached "footer.html" . }}
 {{ end }}
